Archive2/93/22e898887a26ed/output
main.cpp:26:29: error: use of undeclared identifier 'vmoot'; did you mean 'moot'?
      moot_is_faggot[idx] = vmoot[idx] + " is " + vfaggot[idx];
                            ^~~~~
                            moot
main.cpp:18:19: note: 'moot' declared here
   vector<string> moot{"m00t", "moot", "m0ot"};
                  ^
main.cpp:26:51: error: use of undeclared identifier 'vfaggot'; did you mean 'faggot'?
      moot_is_faggot[idx] = vmoot[idx] + " is " + vfaggot[idx];
                                                  ^~~~~~~
                                                  faggot
main.cpp:19:19: note: 'faggot' declared here
   vector<string> faggot{"faggot", "fagG0t", "faGgOt"};
                  ^
2 errors generated.
